test_suite/tests/ui/unsupported/union_de.stderr
error: Serde does not support derive for unions
 --> tests/ui/unsupported/union_de.rs:4:1
  |
4 | / union Union {
5 | |     x: u8,
6 | |     y: (),
7 | | }
  | |_^
